--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/qrcode": "^1.5.5",
+    "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/express-session": "^1.18.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
@@ -30,10 +34,15 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.0.1",
+    "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
     "stripe": "^17.4.0",
     "supertest": "^7.0.0",
     "swagger-ui-express": "^5.0.1",
