--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
+    "@types/pdfkit": "^0.13.7",
     "@types/qrcode": "^1.5.5",
     "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^2.0.0",
@@ -45,6 +46,7 @@
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.1",
     "prisma": "^6.0.1",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
