--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "postinstall": "yarn prisma:generate",
+    "clear:db": "ts-node ../../src/utils/prisma/clear-db.ts",
     "build": "tsc"
+    
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
