--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "postinstall": "yarn prisma:generate",
     "clear:db": "ts-node ../../src/utils/prisma/clear-db.ts",
     "build": "tsc"
-    
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -35,6 +35,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@types/express-session": "^1.18.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
